# RustWeb

./: .env  Cargo.toml  README.md
migrations/2023-06-19-122531_users_and_comments/: down.sql  up.sql
src/: cors.rs  main.rs  schema.rs
src/models/: user.rs
src/ops/: user.rs
static/css/: index.css  style.css
static/html/: index.html  login.html
static/js/: index.js
templates/: base.html.tera  index.html.tera  nav.html.tera
