[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version= "=0.5.0-rc.3", features = ["json"]}
serde = "1.0.164"
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = {version = "0.4.26", features = ["serde"]}

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]